@@ -53,3 +53,4 @@ Fredrick Paul Eisele <fred@netarx.com>
 Juergen Quittek <quittek@ccrle.nec.de>
 Harold L Hunt II <huntharo@msu.edu>
 Bert Wijnen <bwijnen@lucent.com>
+Michael Hocke <mh103@arrakis.ns.its.nyu.edu>
